--- a/config/zones/US-CAR-SCEG.yaml
+++ b/config/zones/US-CAR-SCEG.yaml
@@ -196,13 +196,15 @@ contributors:
   - robertahunt
   - KabelWlan
 country: US
+country_name: USA
 delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer:
-  A third of the nuclear-related electricity production is attributed to the balancing authority South Carolina Public Service Authority
-  (US-CAR-SC) due to an agreement between the two balancing authorities. Read more on the zone definition wiki page.
+disclaimer: A third of the nuclear-related electricity production is attributed to
+  the balancing authority South Carolina Public Service Authority (US-CAR-SC) due
+  to an agreement between the two balancing authorities. Read more on the zone definition
+  wiki page.
 emissionFactors:
   direct:
     battery discharge:
@@ -311,10 +313,12 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 932.0702837
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 968.568923
     gas:
       - datetime: '2020-01-01'
@@ -531,4 +535,3 @@ sources:
     link: ' https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing'
 timezone: US/Eastern
 zone_name: South Carolina Electric & Gas Company
-country_name: USA
