--- a/config/zones/US-MIDA-PJM.yaml
+++ b/config/zones/US-MIDA-PJM.yaml
@@ -89,6 +89,9 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 418.8
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 419.9
   biomass:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -213,6 +216,9 @@ capacity:
     - datetime: '2025-05-01'
       source: EIA.gov
       value: 2008.5
+    - datetime: '2025-08-01'
+      source: EIA.gov
+      value: 2011.7
   coal:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -524,6 +530,15 @@ capacity:
     - datetime: '2025-05-01'
       source: EIA.gov
       value: 104742.5
+    - datetime: '2025-06-01'
+      source: EIA.gov
+      value: 104358.5
+    - datetime: '2025-07-01'
+      source: EIA.gov
+      value: 104356.5
+    - datetime: '2025-08-01'
+      source: EIA.gov
+      value: 104359.1
   geothermal:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -1000,7 +1015,16 @@ capacity:
       value: 15855.9
     - datetime: '2025-05-01'
       source: EIA.gov
-      value: 15885.8
+      value: 15974.3
+    - datetime: '2025-06-01'
+      source: EIA.gov
+      value: 16051.2
+    - datetime: '2025-07-01'
+      source: EIA.gov
+      value: 16282.4
+    - datetime: '2025-08-01'
+      source: EIA.gov
+      value: 16309.7
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -1117,6 +1141,8 @@ contributors:
   - VIKTORVAV99
   - alejandranavcas
 country: US
+country_name: USA
+currency: USD
 delays:
   production: 7
 emissionFactors:
@@ -1462,5 +1488,3 @@ sources:
 timezone: America/New_York
 zone_name: PJM Interconnection
 zone_short_name: PJM
-country_name: USA
-currency: USD
