--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -117,6 +117,9 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 853.9
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 858.7
   hydro:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -242,6 +245,9 @@ capacity:
     - datetime: '2025-01-01'
       source: EIA.gov
       value: 4186.7
+    - datetime: '2025-06-01'
+      source: EIA.gov
+      value: 4259.7
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -256,6 +262,7 @@ contributors:
   - robertahunt
   - KabelWlan
 country: US
+country_name: USA
 delays:
   consumption: 30
   consumptionForecast: 30
@@ -358,10 +365,12 @@ emissionFactors:
         value: 456.18
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 1179.761649
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 1179.99223
     gas:
       - datetime: '2020-01-01'
@@ -567,4 +576,3 @@ sources:
     link: ' https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing'
 timezone: US/Pacific
 zone_name: Nevada Power Company
-country_name: USA
