--- a/config/zones/US-SW-TEPC.yaml
+++ b/config/zones/US-SW-TEPC.yaml
@@ -17,6 +17,9 @@ capacity:
     - datetime: '2023-12-01'
       source: EIA.gov
       value: 70.0
+    - datetime: '2025-07-01'
+      source: EIA.gov
+      value: 270.0
   biomass:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -101,6 +104,9 @@ capacity:
     - datetime: '2023-12-01'
       source: EIA.gov
       value: 495.0
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 492.2
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -121,6 +127,7 @@ contributors:
   - robertahunt
   - KabelWlan
 country: US
+country_name: USA
 delays:
   consumption: 30
   consumptionForecast: 30
@@ -418,4 +425,3 @@ sources:
     link: ' https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing'
 timezone: US/Arizona
 zone_name: Tucson Electric Power Company
-country_name: USA
