--- a/config/zones/US-MIDW-AECI.yaml
+++ b/config/zones/US-MIDW-AECI.yaml
@@ -82,12 +82,16 @@ capacity:
     - datetime: '2025-04-01'
       source: EIA.gov
       value: 941.4
+    - datetime: '2025-05-01'
+      source: EIA.gov
+      value: 959.4
 comment: Associated Electric Cooperative, Inc.
 contributors:
   - systemcatch
   - robertahunt
   - KabelWlan
 country: US
+country_name: USA
 delays:
   consumption: 30
   consumptionForecast: 30
@@ -190,10 +194,12 @@ emissionFactors:
         value: 615.16
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 988.4513953999999
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 971.680711
     gas:
       - datetime: '2020-01-01'
@@ -413,4 +419,3 @@ sources:
     link: ' https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing'
 timezone: US/Central
 zone_name: Associated Electric Cooperative
-country_name: USA
