--- a/config/zones/US-NW-WACM.yaml
+++ b/config/zones/US-NW-WACM.yaml
@@ -113,6 +113,15 @@ capacity:
     - datetime: '2025-02-01'
       source: EIA.gov
       value: 1590.3
+    - datetime: '2025-06-01'
+      source: EIA.gov
+      value: 1671.6
+    - datetime: '2025-07-01'
+      source: EIA.gov
+      value: 1725.8
+    - datetime: '2025-08-01'
+      source: EIA.gov
+      value: 1752.9
   geothermal:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -223,7 +232,10 @@ capacity:
       value: 549.4
     - datetime: '2025-05-01'
       source: EIA.gov
-      value: 567.3
+      value: 572.3
+    - datetime: '2025-08-01'
+      source: EIA.gov
+      value: 652.3
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -289,6 +301,7 @@ contributors:
   - robertahunt
   - KabelWlan
 country: US
+country_name: USA
 delays:
   consumption: 30
   consumptionForecast: 30
@@ -394,10 +407,12 @@ emissionFactors:
         value: 645.47
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 1125.725068
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 1094.5397600000001
     gas:
       - datetime: '2020-01-01'
@@ -618,4 +633,3 @@ sources:
 timezone: US/Mountain
 zone_name: Western Area Power Administration - Rocky Mountain Region
 zone_short_name: WAPA Rocky Mountains
-country_name: USA
