--- a/config/zones/US-NW-WAUW.yaml
+++ b/config/zones/US-NW-WAUW.yaml
@@ -82,6 +82,7 @@ contributors:
   - robertahunt
   - KabelWlan
 country: US
+country_name: USA
 delays:
   consumption: 30
   consumptionForecast: 30
@@ -163,7 +164,8 @@ emissionFactors:
         value: 271.22
     coal:
       datetime: '2012-01-01'
-      source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+      source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots
+        of coal power generation."
       value: 776.557703
     gas:
       datetime: '2014-01-01'
@@ -350,4 +352,3 @@ sources:
 timezone: US/Mountain
 zone_name: Western Area Power Administration - Upper Great Plains West
 zone_short_name: WAPA Upper Great Plains
-country_name: USA
