--- a/config/zones/US-SE-SEPA.yaml
+++ b/config/zones/US-SE-SEPA.yaml
@@ -65,6 +65,9 @@ capacity:
     - datetime: '2024-09-01'
       source: EIA.gov
       value: 275.0
+    - datetime: '2025-08-01'
+      source: EIA.gov
+      value: 415.0
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -79,6 +82,7 @@ contributors:
   - robertahunt
   - KabelWlan
 country: US
+country_name: USA
 delays:
   production: 48
 emissionFactors:
@@ -283,4 +287,3 @@ sources:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
 timezone: US/Eastern
 zone_name: Southeastern Power Administration
-country_name: USA
