--- a/config/zones/US-SE-SOCO.yaml
+++ b/config/zones/US-SE-SOCO.yaml
@@ -87,6 +87,9 @@ capacity:
     - datetime: '2025-03-01'
       source: EIA.gov
       value: 1878.0
+    - datetime: '2025-07-01'
+      source: EIA.gov
+      value: 1776.8
   coal:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -241,6 +244,9 @@ capacity:
     - datetime: '2025-03-01'
       source: EIA.gov
       value: 1346.1
+    - datetime: '2025-07-01'
+      source: EIA.gov
+      value: 1349.9
   solar:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -452,6 +458,7 @@ contributors:
   - KabelWlan
   - MisterClean
 country: US
+country_name: USA
 delays:
   consumption: 30
   consumptionForecast: 30
@@ -568,10 +575,12 @@ emissionFactors:
         value: 277.252
     coal:
       - datetime: '2020-01-01'
-        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 943.0750138
       - datetime: '2021-01-01'
-        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots of coal power generation."
+        source: eGrid 2021; Oberschelp, Christopher, et al. "Global emission hotspots
+          of coal power generation."
         value: 950.540864
     gas:
       - datetime: '2020-01-01'
@@ -773,4 +782,3 @@ sources:
     link: ' https://drive.google.com/file/d/1_FAAuTtIdMuORZKsqHnd9vMNHlQgYarh/view?usp=sharing'
 timezone: US/Eastern
 zone_name: Southern Company Services
-country_name: USA
